--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "react-boilerplate",
-  "version": "3.7.0",
-  "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "name": "redux-saga-starter",
+  "version": "0.0.1",
+  "description": "Redux saga starter",
   "repository": {
     "type": "git",
-    "url": "git://github.com/react-boilerplate/react-boilerplate.git"
+    "url": "git@gecgithub01.walmart.com:l0z02ju/redux-saga-starter.git"
   },
   "engines": {
     "npm": ">=5",
     "node": ">=8.10.0"
   },
-  "author": "Max Stoiber",
+  "author": "Lingyang Zhu",
   "license": "MIT",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
