--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "redux-saga-starter",
+  "name": "react-lazy-load-demo",
   "version": "0.0.1",
-  "description": "Redux saga starter",
+  "description": "React lazy load demo",
   "repository": {
     "type": "git",
-    "url": "git@gecgithub01.walmart.com:l0z02ju/redux-saga-starter.git"
+    "url": "https://github.com/kathypizza330/react-lazy-load-demo.git"
   },
   "engines": {
     "npm": ">=5",
